[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/weapon_animations/Player_Ranged_Animations_Fire.png" type="Texture" id=1]
[ext_resource path="res://Scripts/weapon_script/Ranged/FireWaveProj.gd" type="Script" id=2]
[ext_resource path="res://Scripts/weapon_script/Ranged/FireWave1.gd" type="Script" id=3]
[ext_resource path="res://Scripts/weapon_script/Ranged/FireWave3.gd" type="Script" id=4]
[ext_resource path="res://Scripts/weapon_script/Ranged/FireWave2.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
resource_name = "burst"
length = 0.350001
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.25315, 5.47993 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.60686, 7.40523 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5892, 8.5679 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.2915, 4.06302 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.62082, 1.97024 )

[node name="FireWaveProj" type="KinematicBody2D"]
position = Vector2( 2.24315, -56.0541 )
scale = Vector2( 2.5, 1.6 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2 )
texture = ExtResource( 1 )
vframes = 2
hframes = 8
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/burst = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -0.416786, -1.487 )
scale = Vector2( 2.5, 2 )
collision_layer = 128
collision_mask = 5
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -0.185087, 5.60106 )
scale = Vector2( 2.5, 2 )
shape = SubResource( 4 )

[node name="Hitbox2" type="Area2D" parent="."]
position = Vector2( -0.416786, -1.487 )
scale = Vector2( 2.5, 2 )
collision_layer = 128
collision_mask = 5
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox2"]
visible = false
position = Vector2( -0.164254, 1.38622 )
scale = Vector2( 2.5, 2 )
shape = SubResource( 3 )

[node name="Hitbox3" type="Area2D" parent="."]
position = Vector2( -0.416786, -1.487 )
scale = Vector2( 2.5, 2 )
collision_layer = 128
collision_mask = 5
script = ExtResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox3"]
position = Vector2( -0.23325, -0.818341 )
scale = Vector2( 2.5, 2 )
shape = SubResource( 5 )

[node name="vCollision" type="Area2D" parent="."]
scale = Vector2( 2.5, 2 )
collision_layer = 128

[node name="Collision" type="CollisionShape2D" parent="vCollision"]
position = Vector2( -0.307146, 12.5823 )
scale = Vector2( 2.5, 2 )
shape = SubResource( 6 )

[node name="hCollision" type="Area2D" parent="."]
scale = Vector2( 2.5, 2 )
collision_layer = 128

[node name="Collision" type="CollisionShape2D" parent="hCollision"]
position = Vector2( -0.366961, 17.005 )
scale = Vector2( 2.5, 2 )
shape = SubResource( 7 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hitbox2" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hitbox3" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="vCollision" to="." method="_on_vCollision_body_entered"]
[connection signal="body_entered" from="hCollision" to="." method="_on_hCollision_body_entered"]
